@@ -105,7 +105,7 @@ Store build time data in xml (native mode)
 
 (It is recommended to use Keen.io to store data and generate trends, see below)
 
-To store data in xml, native mode needs to be enabled. The xml file is stored in `trends/buildtimes.xml` by default.
+To store data in xml, native mode needs to be enabled. The xml file is stored in `dashboard/buildtimes.xml` by default.
 
 To analyse timestamps and store the analysed data :
 
@@ -117,7 +117,7 @@ To generate a chart from the data stored in the xml file :
 
 `generate_trend.py --mode=native`
 
-This will save a trend image in `trends/trend.png`
+This will save a trend image in `dashboard/trend.png`
 
 Store build time data in Keen.io
 --------------------------------
@@ -142,14 +142,14 @@ Visualise the trends (powered by Keen.io)
 
 Multiple trends are available when data was stored in `keen` mode :
 
-Folder `trends` contains all files necessary to display the generated trends.
-- Copy folder `trends` to the desired location
+Folder `dashboard` contains all files necessary to display the generated trends.
+- Copy folder `dashboard` to the desired location
 - Rename (or copy) `config_sample.js` to `config.js`
 - Edit `config.js` :
   - add `keen_project_id` (see Keen.io section above)
   - add `keen_read_key` (see Keen.io section above, or generate a scoped read key with `get_read_key.py project_name` (`project_name` should be the same as the project_name used to store the data, this is usually the git-repo name, fe. `buildtimetrend/python-client`)
   - add `project_name` : repo name is a good default, but it can be custom project name as well, this is only used as title on the webpage. It is not used to collect data.
-- Browse to `trends/index.html`, this should display the trends
+- Browse to `dashboard/index.html`, this should display the trends
 
 If you are building a Github repo on Travis CI, and you have `gh-pages` branch, you can use the script mentioned below to automatically add the right files and create the config file.
 
