@@ -24,7 +24,7 @@
 # get folder where script is located
 BUILD_TREND_HOME=$(cd `dirname "${BASH_SOURCE[0]}"` && pwd)
 BUILD_TREND_LOGFILE=$BUILD_TREND_HOME/timestamps.csv
-BUILD_TREND_TRENDS_DIR=$BUILD_TREND_HOME/trends
+BUILD_TREND_TRENDS_DIR=$BUILD_TREND_HOME/dashboard
 BUILD_TREND_OUTPUTFILE=$BUILD_TREND_TRENDS_DIR/buildtimes.xml
 BUILD_TREND_TRENDFILE=$BUILD_TREND_TRENDS_DIR/trend.png
 PATH=${PATH}:${BUILD_TREND_HOME}
